working section added

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         <!-- 
           courses heading start
          -->
-         <div class="container text-center p-5">
+         <div class="container text-center my-5 p-5">
           <h1 class="fw-bold">
-            Discover Our New <br> CLasses
+            Discover Our New <br> <span class="text-primary">Classes</span>
           </h1>
           <small >It is a long established fact that a reader will be distracted by the readable <br>
             content of a page when looking at its layout</small>
@@ -158,8 +158,8 @@
                 <div class="d-flex">
                   <img src="./images/course/course-2.png" alt="">
                   <div class="ps-5 py-3 border rounded">
-                    <h4>Fundamental Of UI/UX Design</h4>
-                    <p>UX and UI: Two terms that are often used interchangeably, but actually mean very different things. So what exactly is the difference?</p>
+                    <h4>Defination of Coding </h4>
+                    <p>The Code Foundations skill path is your portal to a coding career. We teach you the basics so you’re writing code, thinking like a programmer</p>
                     <h5 class="text-primary">price: $20</h5>
                   </div>
                 </div>
@@ -209,6 +209,57 @@
           </div>
         </div>
         <!-- courser area end -->
+        <!-- courses button start -->
+        <div class="container text-center p-5 ">
+          <button class="btn btn-primary px-4 py-2">Vew All Classes</button>
+        </div>
+        <!-- courses button end -->
+
+        <!-- Instructor area start -->
+        <section>
+          <div class="container bg-light  px-0">
+            <div class="row">
+             <div class="col-lg-5">
+              <img src="images/working.png" class="img-fluid" alt="">
+             </div>
+             <div class="col-lg-7 d-flex align-items-center p-5 ">
+              <div class="">
+                <h1 class="fw-bold">Explore The elearning <br>
+                  Institute</h1>
+                  <p>There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even slightly believable. If you are going
+                    to use a passage of Lorem Ipsum, you need to be sure.</p>
+                    <br>
+                    <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                      generators on the Internet tend to repeat predefined.</p>
+                    <div class="container my-4 ">
+                      <div class="row row-cols-3">
+                        <div class="col">
+                          <h1 class="fw-bold">3.2k+</h1>
+                          <h5 class="fw-light"> Online classes
+                          </h5>
+                        </div>                        
+                        <div class="col">
+                          <h1 class="fw-bold">600+ </h1>
+                          <h5 class="fw-light"> Expert Instructors
+                          </h5>
+                        </div>                        
+                        <div class="col">
+                          <h1 class="fw-bold">1k+</h1>
+                          <h5 class="fw-light"> Reviw and Rattings
+                          </h5>
+                        </div>                        
+                      </div>
+                      
+                    </div>  
+                    <button class="btn btn-primary px-4 py-2 fw-bold ">Vew All Classess</button>    
+              </div>
+             </div>
+            </div>
+          </div>
+        </section>
+        <!-- Instructor area end -->
       </main>
       <!-- 
         main body end
