--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <!-- Instructor area start -->
         <section>
-          <div class="container bg-light  px-0">
+          <div class="container bg-light mb-5  px-0">
             <div class="row">
              <div class="col-lg-5">
               <img src="images/working.png" class="img-fluid" alt="">
@@ -260,6 +260,24 @@
           </div>
         </section>
         <!-- Instructor area end -->
+
+        <!-- Registration section start -->
+        <div class="secton container rounded py-4 my-5 bg-primary">
+          <div class="d-flex justify-content-around align-items-center p-5">
+            <div class="text-white">
+              <h1 >Ready to join?</h1>
+              <p>It is a long established fact that a reader will be distracted by the 
+              
+              <br>
+              readable content of a page when looking at its layout.
+              </p>
+            </div>
+            <div class=""><button class="btn btn-light text-primary fw-bold">Register Now</button></div>
+
+          </div>
+        </div>
+        <!-- Registration section end -->
+
       </main>
       <!-- 
         main body end
