--- a/index.html
+++ b/index.html
@@ -350,13 +350,13 @@
         <!-- Registration section end -->
 
         <!-- Success full student section  -->
-        <div class="card container b-none">
+        <div class="card container border-0">
           <div class="card-body">
             <h1 class="fw-bold">Meet Our Successfull
               <br>
               Students</h1>
             
-            <p class="fw-light">It is a long established fact that a reader will be distracted by the
+            <p >It is a long established fact that a reader will be distracted by the
               <br>
               readable content of a page when looking at its layout</p>
 
@@ -523,7 +523,7 @@
             <a href="#" class="d-inline ">privacy</a> 
             <span>/</span>
             <a href="#" class="d-inline">privacy</a>
-            <div class=" d-flex ">
+            <div class=" ">
               <a href="https://www.facebook.com/mdmasumali.raju/"> <i class="fa-brands fa-facebook-f text-white p-3"></i></a>
               <a href="https://www.facebook.com/mdmasumali.raju/"><i class="fa-brands fa-twitter text-white p-3"></i></a>
               <a href="https://www.facebook.com/mdmasumali.raju/">  <i class="fa-brands fa-linkedin-in text-white p-3"></i></a>
