--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
         <!-- Registration section start -->
         <div class="container rounded py-4 my-5 bg-primary">
-          <div class="d-flex gap-4 justify-content-around flex-column flex-md-row align-items-center p-5">
+          <div class="d-flex gap-4 justify-content-around flex-column flex-md-column align-items-center p-5">
             <div class="text-white">
               <h1 >Ready to join?</h1>
               <p>It is a long established fact that a reader will be distracted by the 
